--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -25,14 +25,8 @@ TODO: Variables
 
 /* 
 $font_default: "2015_Cruiser";
-$font_size: 15rem;
-
 $font_default: "2015_Cruiser_Hollow";
-$font_size: 15rem;
-
 $font_default: "2015_Cruiser_Hollow_Italic";
-$font_size: 15rem;
-
 $font_default: "2015_Cruiser_Italic";
 $font_size: 15rem;
 
@@ -47,6 +41,10 @@ h2, h3, h4, h5, h6 {
  */
 .lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
   line-height: 1.5 !important;
+}
+
+.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
+  line-height: 1.7813 !important;
 }
 
 /* Padrão: 600-700px. */
@@ -114,7 +112,7 @@ html {
 TODO: Error
 ◈──────────────────────────────────────────────────────◈ */
 .error {
-  font-size: 19rem;
+  font-size: 16rem;
   /*     
     color: white;
     background-color: red;
@@ -261,7 +259,7 @@ TODO: Texts
 }
 
 html {
-  font-family: Medabots_Italic;
+  font-family: "Downlink";
   font-size: 1px;
   color: black;
 }
@@ -274,7 +272,7 @@ q, cite, figcaption,
 form, label, input, textarea, select, button, fieldset, legend,
 table, tr, th, td,
 e {
-  font-size: 19rem;
+  font-size: 16rem;
 }
 
 div, header, nav, main, article, section, aside, footer {
@@ -690,7 +688,7 @@ dl > div:not(:nth-last-of-type(1)) {
 /*  TODO:    1 ▶ Classes
 ◈──────────────────────────────────────────────────────◈ */
 .font_size {
-  font-size: 19rem;
+  font-size: 16rem;
 }
 
 .font_monospace, .codeViewer2 .text dd code {
@@ -719,7 +717,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .mini_topic {
-  font-size: 19rem;
+  font-size: 16rem;
   background: 0;
   text-align: center;
   font-weight: bold;
@@ -727,7 +725,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .container_text {
-  font-size: 19rem;
+  font-size: 16rem;
   padding: 8px 13px 9px;
   border: 1px solid #cccccc;
   border-radius: 20px;
@@ -982,7 +980,7 @@ dl.noListStyle > div:not(:nth-last-of-type(1)), dl.codeViewer > div:not(:nth-las
 }
 
 .list_featured li div {
-  font-size: 19rem;
+  font-size: 16rem;
 }
 
 .list_featured li + li {
@@ -2068,7 +2066,7 @@ TODO: Layout Sections
   right: 9px;
   z-index: 1000;
   background: url(../../images/bgs/header.png) center/100% 100%;
-  font-size: 19rem;
+  font-size: 16rem;
   box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.28);
   /*
     border-radius: 0px;
@@ -4931,7 +4929,7 @@ figure.outdoor img {
 }
 
 .lightbox_text {
-  font-size: 19rem;
+  font-size: 16rem;
   font-weight: bold;
   filter: drop-shadow(0px 0px 2px #007899);
 }
