--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -37,14 +37,8 @@ $font_size: 14rem;
 }
 
 $font_default: "Downlink_Bold";
-$font_size: 16rem;
-
 $font_default: "Downlink_Italic";
-$font_size: 16rem;
-
 $font_default: "Downlink_Bold_Italic";
-$font_size: 16rem;
-
 $font_default: "Downlink";
 $font_size: 16rem;
 
@@ -53,14 +47,8 @@ $font_size: 16rem;
 }
 /* 
 $font_default: "2015_Cruiser";
-$font_size: 15rem;
-
 $font_default: "2015_Cruiser_Hollow";
-$font_size: 15rem;
-
 $font_default: "2015_Cruiser_Hollow_Italic";
-$font_size: 15rem;
-
 $font_default: "2015_Cruiser_Italic";
 $font_size: 15rem;
 
@@ -79,6 +67,16 @@ $font_size: 19rem;
 
 .lineHeight {
     line-height: 1.5 !important;
+}
+
+$font_default: "Downlink_Bold";
+$font_default: "Downlink_Italic";
+$font_default: "Downlink_Bold_Italic";
+$font_default: "Downlink";
+$font_size: 16rem;
+
+.lineHeight {
+    line-height: 1.7813 !important;
 }
 
 
