--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -24,6 +24,7 @@ TODO: Variables
 }
 
 /* 
+
 $font_default: "2015_Cruiser";
 $font_default: "2015_Cruiser_Hollow";
 $font_default: "2015_Cruiser_Hollow_Italic";
@@ -45,6 +46,18 @@ h2, h3, h4, h5, h6 {
 
 .lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
   line-height: 1.7813 !important;
+}
+
+.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
+  line-height: 1.5833 !important;
+}
+
+.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
+  line-height: 1.5 !important;
+}
+
+* {
+  font-style: italic !important;
 }
 
 /* Padrão: 600-700px. */
@@ -112,7 +125,7 @@ html {
 TODO: Error
 ◈──────────────────────────────────────────────────────◈ */
 .error {
-  font-size: 16rem;
+  font-size: 19rem;
   /*     
     color: white;
     background-color: red;
@@ -259,7 +272,7 @@ TODO: Texts
 }
 
 html {
-  font-family: "Downlink";
+  font-family: Copperplate;
   font-size: 1px;
   color: black;
 }
@@ -272,7 +285,7 @@ q, cite, figcaption,
 form, label, input, textarea, select, button, fieldset, legend,
 table, tr, th, td,
 e {
-  font-size: 16rem;
+  font-size: 19rem;
 }
 
 div, header, nav, main, article, section, aside, footer {
@@ -688,7 +701,7 @@ dl > div:not(:nth-last-of-type(1)) {
 /*  TODO:    1 ▶ Classes
 ◈──────────────────────────────────────────────────────◈ */
 .font_size {
-  font-size: 16rem;
+  font-size: 19rem;
 }
 
 .font_monospace, .codeViewer2 .text dd code {
@@ -717,7 +730,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .mini_topic {
-  font-size: 16rem;
+  font-size: 19rem;
   background: 0;
   text-align: center;
   font-weight: bold;
@@ -725,7 +738,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .container_text {
-  font-size: 16rem;
+  font-size: 19rem;
   padding: 8px 13px 9px;
   border: 1px solid #cccccc;
   border-radius: 20px;
@@ -980,7 +993,7 @@ dl.noListStyle > div:not(:nth-last-of-type(1)), dl.codeViewer > div:not(:nth-las
 }
 
 .list_featured li div {
-  font-size: 16rem;
+  font-size: 19rem;
 }
 
 .list_featured li + li {
@@ -2066,7 +2079,7 @@ TODO: Layout Sections
   right: 9px;
   z-index: 1000;
   background: url(../../images/bgs/header.png) center/100% 100%;
-  font-size: 16rem;
+  font-size: 19rem;
   box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.28);
   /*
     border-radius: 0px;
@@ -4929,7 +4942,7 @@ figure.outdoor img {
 }
 
 .lightbox_text {
-  font-size: 16rem;
+  font-size: 19rem;
   font-weight: bold;
   filter: drop-shadow(0px 0px 2px #007899);
 }
