--- a/hi-techCore/styles/css/downloadFonts.css
+++ b/hi-techCore/styles/css/downloadFonts.css
@@ -64,6 +64,16 @@ pois as fontes precisam ser importadas antes de serem usadas no site.
 } 
 
 @font-face {
+    font-family: "Xolonium-Regular";
+    src: url("../../fonts/Xolonium-Regular.otf");
+}
+
+@font-face {
+    font-family: "Copperplate";
+    src: url("../../fonts/Copperplate.ttf");
+}
+
+@font-face {
     font-family: "Cyber-BoldBook";
     src: url("../../fonts/Cyber-BoldBook.ttf");
 } 
