--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -19,10 +19,6 @@ TODO: Variables
   line-height: 2.0358 !important;
 }
 
-.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
-  line-height: 1.7813 !important;
-}
-
 /* 
 
 $font_default: "2015_Cruiser";
@@ -41,6 +37,10 @@ h2, h3, h4, h5, h6 {
 }
  */
 .lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
+  line-height: 1.425 !important;
+}
+
+.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
   line-height: 1.5 !important;
 }
 
@@ -48,18 +48,11 @@ h2, h3, h4, h5, h6 {
   line-height: 1.7813 !important;
 }
 
-.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
-  line-height: 1.5833 !important;
-}
-
-.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
-  line-height: 1.5 !important;
-}
-
+/* 
 * {
-  font-style: italic !important;
+    font-style: italic !important;
 }
-
+ */
 /* Padrão: 600-700px. */
 /* Apple: 16px em 320w, e 22px em 736w. */
 /*  TODO:    1 ▶ Specific Elements & Components
@@ -125,7 +118,7 @@ html {
 TODO: Error
 ◈──────────────────────────────────────────────────────◈ */
 .error {
-  font-size: 20rem;
+  font-size: 16rem;
   /*     
     color: white;
     background-color: red;
@@ -272,7 +265,7 @@ TODO: Texts
 }
 
 html {
-  font-family: Copperplate;
+  font-family: "Downlink_Italic";
   font-size: 1px;
   color: black;
 }
@@ -285,7 +278,7 @@ q, cite, figcaption,
 form, label, input, textarea, select, button, fieldset, legend,
 table, tr, th, td,
 e {
-  font-size: 20rem;
+  font-size: 16rem;
 }
 
 div, header, nav, main, article, section, aside, footer {
@@ -701,7 +694,7 @@ dl > div:not(:nth-last-of-type(1)) {
 /*  TODO:    1 ▶ Classes
 ◈──────────────────────────────────────────────────────◈ */
 .font_size {
-  font-size: 20rem;
+  font-size: 16rem;
 }
 
 .font_monospace, .codeViewer2 .text dd code {
@@ -730,7 +723,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .mini_topic {
-  font-size: 20rem;
+  font-size: 16rem;
   background: 0;
   text-align: center;
   font-weight: bold;
@@ -738,7 +731,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .container_text {
-  font-size: 20rem;
+  font-size: 16rem;
   padding: 8px 13px 9px;
   border: 1px solid #cccccc;
   border-radius: 20px;
@@ -993,7 +986,7 @@ dl.noListStyle > div:not(:nth-last-of-type(1)), dl.codeViewer > div:not(:nth-las
 }
 
 .list_featured li div {
-  font-size: 20rem;
+  font-size: 16rem;
 }
 
 .list_featured li + li {
@@ -2079,7 +2072,7 @@ TODO: Layout Sections
   right: 9px;
   z-index: 1000;
   background: url(../../images/bgs/header.png) center/100% 100%;
-  font-size: 20rem;
+  font-size: 16rem;
   box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.28);
   /*
     border-radius: 0px;
@@ -4942,7 +4935,7 @@ figure.outdoor img {
 }
 
 .lightbox_text {
-  font-size: 20rem;
+  font-size: 16rem;
   font-weight: bold;
   filter: drop-shadow(0px 0px 2px #007899);
 }
