--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -6122,6 +6122,7 @@ button * {
   letter-spacing: 2px;
   text-transform: uppercase;
   text-transform: none;
+  text-shadow: 0px 0px 0px rgba(255, 255, 255, 0.5);
 }
 
 table *, .lightbox * {
