--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -6193,6 +6193,7 @@ button * {
     letter-spacing: 2px;
     text-transform: uppercase;
     text-transform: none;
+    text-shadow: 0px 0px 0px hsla(0, 0%, 100%, 0.5); 
 
     //line-height: 1.6764 !important;
 }
