--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -6193,7 +6193,8 @@ button * {
     letter-spacing: 2px;
     text-transform: uppercase;
     text-transform: none;
-    text-shadow: 0px 0px 0px hsla(0, 0%, 100%, 0.5); 
+    text-shadow: 1px 1px 25px hsla(0, 0%, 100%, 1); 
+    // text-shadow: 0.5px 0.5px 0px hsla(0, 0%, 100%, 1); 
 
     //line-height: 1.6764 !important;
 }
