--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -6215,12 +6215,12 @@ button * {
     letter-spacing: 0px;    
     text-transform: none;
 
-    font-family: 'Videopac'; 
-    font-size: 19rem !important;
+    font-family: 'Videopac_Bold'; 
+    font-size: 18rem !important;
     letter-spacing: 2px;
     text-transform: uppercase;
     text-transform: none;
-    font-weight: 900;
+    // font-weight: 900;
     // text-shadow: 1px 1px 25px hsla(0, 0%, 100%, 1); 
     // text-shadow: 0.5px 0.5px 0px hsla(0, 0%, 100%, 1); 
 
