--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -6052,12 +6052,16 @@ nav * {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 100;
-  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.75) !important;
+  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.8), 3px 3px 2px rgba(0, 0, 0, 0.12) !important;
 }
 
 /* .logo {
     font-size: 20rem; // Videopac
 } */
+.logo img {
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.32)) !important;
+}
+
 button * {
   font-family: 'Chromia';
   font-size: 17rem !important;
