--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -6059,7 +6059,7 @@ nav * {
     font-size: 20rem; // Videopac
 } */
 .logo img {
-  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.26)) !important;
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.25)) !important;
 }
 
 button * {
@@ -6083,11 +6083,11 @@ button * {
   font-size: 19rem !important;
   letter-spacing: 0px;
   text-transform: none;
-  font-family: 'Videopac_Bold';
-  font-size: 18rem !important;
+  font-family: 'Videopac';
+  font-size: 17rem !important;
   letter-spacing: 2px;
-  text-transform: uppercase;
   text-transform: none;
+  text-transform: uppercase;
 }
 
 table *, .lightbox * {
