--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -6023,7 +6023,7 @@ h6 {
   letter-spacing: 3px;
 }
 
-nav * {
+.header-nav * {
   font-family: 'Protoculture';
   font-size: 20rem;
   text-transform: uppercase;
@@ -6052,14 +6052,14 @@ nav * {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 100;
-  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5), 3px 3px 2px rgba(0, 0, 0, 0.12) !important;
+  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5) !important;
 }
 
 /* .logo {
     font-size: 20rem; // Videopac
 } */
-.logo img {
-  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.25)) !important;
+.header-nav a {
+  filter: drop-shadow(3px 3px 1px rgba(0, 0, 0, 0.15)) !important;
 }
 
 button * {
