--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -6147,7 +6147,7 @@ h4 { letter-spacing: 7px; }
 h5 { letter-spacing: 5px; }
 h6 { letter-spacing: 3px; }
 
-nav * {
+.header-nav * {
 
     font-family: 'Protoculture';
     font-size: 20rem;
@@ -6181,7 +6181,8 @@ nav * {
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 100;
-    text-shadow: 0px 0px 1px hsla(0, 0%, 0%, 0.5), 3px 3px 2px hsla(0, 0%, 0%, 0.12) !important; 
+    // text-shadow: 0px 0px 1px hsla(0, 0%, 0%, 0.5), 3px 3px 2px hsla(0, 0%, 0%, 0.12) !important; 
+    text-shadow: 0px 0px 1px hsla(0, 0%, 0%, 0.5) !important; 
 
     //line-height: 1.6764 !important;
 }
@@ -6190,8 +6191,8 @@ nav * {
     font-size: 20rem; // Videopac
 } */
 
-.logo img { 
-    filter: drop-shadow(3px 3px 2px hsla(0, 0%, 0%, 0.25)) !important;
+.header-nav a { 
+    filter: drop-shadow(3px 3px 1px hsla(0, 0%, 0%, 0.15)) !important;
 } 
 
 button * {
