--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -5999,28 +5999,41 @@ p, li, span {
 }
 
 /*     */
-h2, h3, h4, h5, h6 {
-  font-family: 'Videopac';
+/* 
+h2, h3, h4, h5, h6 { 
+    font-family: 'Videopac';
+    // filter: drop-shadow(0px 0px 0px hsla(195, 100%, 15%, 1));
 }
 
+h2 { letter-spacing: 9px; }
+h3 { letter-spacing: 8px; }
+h4 { letter-spacing: 7px; }
+h5 { letter-spacing: 5px; }
+h6 { letter-spacing: 3px; }
+ */
 h2 {
-  letter-spacing: 9px;
+  font-family: 'IDroid';
+  letter-spacing: calc(7px - (1px * 2));
 }
 
 h3 {
-  letter-spacing: 8px;
+  font-family: 'IDroid';
+  letter-spacing: calc(7px - (1px * 3));
 }
 
 h4 {
-  letter-spacing: 7px;
+  font-family: 'IDroid';
+  letter-spacing: calc(7px - (1px * 4));
 }
 
 h5 {
-  letter-spacing: 5px;
+  font-family: 'IDroid';
+  letter-spacing: calc(7px - (1px * 5));
 }
 
 h6 {
-  letter-spacing: 3px;
+  font-family: 'IDroid';
+  letter-spacing: calc(7px - (1px * 6));
 }
 
 .header-nav * {
